lavc/hevc_ps: Fix offset for yuv422 and yuv444.

Fixes ticket #4980.
Analyzed-by: kurosu and Hendrik
Reviewed-by: Ronald